--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <title>Weather Forecast</title>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.webp" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
