--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Accurate and responsive weather forecast application"
     />
-    <title>Weather Forecast</title>
+    <title>WeatherNest</title>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
